--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="header__customer-area">
           <a href="#" class="header__login-link">Login</a>
-          <a href="#" class="header__cta btn btn_prime">Become a member</a>
+          <a href="#" class="header__cta btn btn_prime btn_la">Become a member</a>
         </div>
         <div class="header__burger">
           <svg class="header__burger-img" width="24" height="14" viewBox="0 0 24 14" fill="none"
@@ -72,6 +72,53 @@
             <img src="./assets/img/promo/placeholder.png" alt="phone" class="promo__phone-img">
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="pluses">
+      <div class="container">
+        <h2 class="pluses__title s-title">Better Strategy With 
+          Quality Business</h2>
+          <p class="pluses__subtitle s-subtitle">Problems trying to resolve the conflict between 
+            the&nbsp;two&nbsp;major&nbsp;realms of Classical physics: Newtonian mechanics </p>
+            <div class="row">
+              <div class="pluses__card plus-card">
+                <img src="./assets/img/pluses/icon.svg" alt="Investment Trading" class="plus-card__ico">
+                <p class="plus-card__title">Investment Trading</p>
+                <p class="plus-card__subtitle">the quick fox jumps over the 
+                  lazy dog</p>
+              </div>
+              <div class="pluses__card plus-card">
+                <img src="./assets/img/pluses/icon.svg" alt="Support On Raising Funds" class="plus-card__ico">
+                <p class="plus-card__title">Support On Raising Funds</p>
+                <p class="plus-card__subtitle">the quick fox jumps over the 
+                  lazy dog</p>
+              </div>
+              <div class="pluses__card plus-card">
+                <img src="./assets/img/pluses/icon.svg" alt="Financial Analysis" class="plus-card__ico">
+                <p class="plus-card__title">Financial Analysis</p>
+                <p class="plus-card__subtitle">the quick fox jumps over the 
+lazy dog</p>
+              </div>
+              <div class="pluses__card plus-card">
+                <img src="./assets/img/pluses/icon.svg" alt="the quick fox jumps over the " class="plus-card__ico">
+                <p class="plus-card__title">Taxation Planning</p>
+                <p class="plus-card__subtitle">the quick fox jumps over the 
+lazy dog</p>
+              </div>
+              <div class="pluses__card plus-card">
+                <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
+                <p class="plus-card__title">Save money and tim</p>
+                <p class="plus-card__subtitle">the quick fox jumps over the 
+lazy dog</p>
+              </div>
+              <div class="pluses__card plus-card">
+                <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
+                <p class="plus-card__title">Outsourced Consulting Business</p>
+                <p class="plus-card__subtitle">the quick fox jumps over the 
+                  lazy&nbsp;dog</p>
+              </div>
+            </div>
       </div>
     </section>
 
