--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test landing</title>
   <link rel="stylesheet" href="./assets/css/reset.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -77,48 +78,132 @@
 
     <section class="pluses">
       <div class="container">
-        <h2 class="pluses__title s-title">Better Strategy With 
+        <h2 class="pluses__title s-title">Better Strategy With
           Quality Business</h2>
-          <p class="pluses__subtitle s-subtitle">Problems trying to resolve the conflict between 
-            the&nbsp;two&nbsp;major&nbsp;realms of Classical physics: Newtonian mechanics </p>
-            <div class="row">
-              <div class="pluses__card plus-card">
-                <img src="./assets/img/pluses/icon.svg" alt="Investment Trading" class="plus-card__ico">
-                <p class="plus-card__title">Investment Trading</p>
-                <p class="plus-card__subtitle">the quick fox jumps over the 
-                  lazy dog</p>
-              </div>
-              <div class="pluses__card plus-card">
-                <img src="./assets/img/pluses/icon.svg" alt="Support On Raising Funds" class="plus-card__ico">
-                <p class="plus-card__title">Support On Raising Funds</p>
-                <p class="plus-card__subtitle">the quick fox jumps over the 
-                  lazy dog</p>
-              </div>
-              <div class="pluses__card plus-card">
-                <img src="./assets/img/pluses/icon.svg" alt="Financial Analysis" class="plus-card__ico">
-                <p class="plus-card__title">Financial Analysis</p>
-                <p class="plus-card__subtitle">the quick fox jumps over the 
-lazy dog</p>
-              </div>
-              <div class="pluses__card plus-card">
-                <img src="./assets/img/pluses/icon.svg" alt="the quick fox jumps over the " class="plus-card__ico">
-                <p class="plus-card__title">Taxation Planning</p>
-                <p class="plus-card__subtitle">the quick fox jumps over the 
-lazy dog</p>
-              </div>
-              <div class="pluses__card plus-card">
-                <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
-                <p class="plus-card__title">Save money and tim</p>
-                <p class="plus-card__subtitle">the quick fox jumps over the 
-lazy dog</p>
-              </div>
-              <div class="pluses__card plus-card">
-                <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
-                <p class="plus-card__title">Outsourced Consulting Business</p>
-                <p class="plus-card__subtitle">the quick fox jumps over the 
-                  lazy&nbsp;dog</p>
+        <p class="pluses__subtitle s-subtitle">Problems trying to resolve the conflict between
+          the&nbsp;two&nbsp;major&nbsp;realms of Classical physics: Newtonian mechanics </p>
+        <div class="row">
+          <div class="pluses__card plus-card">
+            <img src="./assets/img/pluses/icon.svg" alt="Investment Trading" class="plus-card__ico">
+            <p class="plus-card__title">Investment Trading</p>
+            <p class="plus-card__subtitle">the quick fox jumps over the
+              lazy dog</p>
+          </div>
+          <div class="pluses__card plus-card">
+            <img src="./assets/img/pluses/icon.svg" alt="Support On Raising Funds" class="plus-card__ico">
+            <p class="plus-card__title">Support On Raising Funds</p>
+            <p class="plus-card__subtitle">the quick fox jumps over the
+              lazy dog</p>
+          </div>
+          <div class="pluses__card plus-card">
+            <img src="./assets/img/pluses/icon.svg" alt="Financial Analysis" class="plus-card__ico">
+            <p class="plus-card__title">Financial Analysis</p>
+            <p class="plus-card__subtitle">the quick fox jumps over the
+              lazy dog</p>
+          </div>
+          <div class="pluses__card plus-card">
+            <img src="./assets/img/pluses/icon.svg" alt="the quick fox jumps over the " class="plus-card__ico">
+            <p class="plus-card__title">Taxation Planning</p>
+            <p class="plus-card__subtitle">the quick fox jumps over the
+              lazy dog</p>
+          </div>
+          <div class="pluses__card plus-card">
+            <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
+            <p class="plus-card__title">Save money and tim</p>
+            <p class="plus-card__subtitle">the quick fox jumps over the
+              lazy dog</p>
+          </div>
+          <div class="pluses__card plus-card">
+            <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
+            <p class="plus-card__title">Outsourced Consulting Business</p>
+            <p class="plus-card__subtitle">the quick fox jumps over the
+              lazy&nbsp;dog</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="container">
+        <h2 class="reviews__title s-title">What Clients Say</h2>
+        <p class="reviews__subtitle s-subtitle">Problems trying to resolve the conflict between 
+          the two major realms of Classical physics: Newtonian mechanics </p>
+
+        <div class="reviews__slider swiper-container">
+          <div class="swiper-wrapper">
+            <div class="reviews__slide review-card swiper-slide">
+              <div class="review-card__inner">
+                <img src="./assets/img/reviews/user1.png" alt="user" class="review-card__img">
+                <p class="review-card__desc">Slate helps you see how many more days you need
+                  to work to reach your financial goal for the month and year.</p>
+                <div class="review-card__rate"></div>
+                <p class="review-card__name">Regina Miles</p>
+                <p class="review-card__position">Designer</p>
               </div>
             </div>
+            <div class="reviews__slide review-card swiper-slide">
+              <div class="review-card__inner">
+                <img src="./assets/img/reviews/user1.png" alt="user" class="review-card__img">
+                <p class="review-card__desc">Slate helps you see how many more days you need
+                  to work to reach your financial goal for the month and year.</p>
+                <div class="review-card__rate"></div>
+                <p class="review-card__name">Regina Miles</p>
+                <p class="review-card__position">Designer</p>
+              </div>
+            </div>
+            <div class="reviews__slide review-card swiper-slide">
+              <div class="review-card__inner">
+                <img src="./assets/img/reviews/user1.png" alt="user" class="review-card__img">
+                <p class="review-card__desc">Slate helps you see how many more days you need
+                  to work to reach your financial goal for the month and year.</p>
+                <div class="review-card__rate"></div>
+                <p class="review-card__name">Regina Miles</p>
+                <p class="review-card__position">Designer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <div class="app">
+      <div class="container">
+        <h2 class="app__title s-title">Download Our App</h2>
+        <p class="app__subtitle s-subtitle">Problems trying to resolve the conflict between 
+          the two major realms of Classical physics: Newtonian mechanics </p>
+        <div class="app__row">
+          <div class="app__card app__card_apple">
+            <p class="app__card-txt">Download on <br>
+              App Store
+            </p>
+            <a href="#" class="app__card-link"></a>
+          </div>
+          <div class="app__card app__card_google">
+            <p class="app__card-txt">Download on <br>
+              Google Play
+            </p>
+            <a href="#" class="app__card-link"></a>
+          </div>
+          <div class="app__card app__card_amazon">
+            <p class="app__card-txt">Download on <br>
+              Google Play
+            </p>
+            <a href="#" class="app__card-link"></a>
+          </div>
+          <div class="app__card app__card_windows">
+            <p class="app__card-txt">Download on <br>
+              Windows Store
+            </p>
+            <a href="#" class="app__card-link"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="contacts">
+      <div class="container">
+
       </div>
     </section>
 
@@ -128,6 +213,7 @@ lazy dog</p>
     <div class="container"></div>
   </footer>
 
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="./assets/js/script.js"></script>
 
 </body>
