--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Test landing</title>
   <link rel="stylesheet" href="./assets/css/reset.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -61,7 +62,7 @@
       <div class="container">
         <div class="row">
           <div class="promo__info-block">
-            <h1 class="promo__title">Financial Assistance With True Purpose</h1>
+            <h1 class="promo__title" data-aos="fade-right">Financial Assistance With True Purpose</h1>
             <p class="promo__info-txt">We know how large objects will act,
               but things on a small scale.</p>
             <div class="promo__btns">
@@ -83,37 +84,37 @@
         <p class="pluses__subtitle s-subtitle">Problems trying to resolve the conflict between
           the&nbsp;two&nbsp;major&nbsp;realms of Classical physics: Newtonian mechanics </p>
         <div class="row">
-          <div class="pluses__card plus-card">
+          <div class="pluses__card plus-card" data-aos="flip-left" data-aos-duration="500">
             <img src="./assets/img/pluses/icon.svg" alt="Investment Trading" class="plus-card__ico">
             <p class="plus-card__title">Investment Trading</p>
             <p class="plus-card__subtitle">the quick fox jumps over the
               lazy dog</p>
           </div>
-          <div class="pluses__card plus-card">
+          <div class="pluses__card plus-card" data-aos="flip-left" data-aos-duration="400">
             <img src="./assets/img/pluses/icon.svg" alt="Support On Raising Funds" class="plus-card__ico">
             <p class="plus-card__title">Support On Raising Funds</p>
             <p class="plus-card__subtitle">the quick fox jumps over the
               lazy dog</p>
           </div>
-          <div class="pluses__card plus-card">
+          <div class="pluses__card plus-card" data-aos="flip-left" data-aos-duration="300">
             <img src="./assets/img/pluses/icon.svg" alt="Financial Analysis" class="plus-card__ico">
             <p class="plus-card__title">Financial Analysis</p>
             <p class="plus-card__subtitle">the quick fox jumps over the
               lazy dog</p>
           </div>
-          <div class="pluses__card plus-card">
+          <div class="pluses__card plus-card" data-aos="flip-left" data-aos-duration="500">
             <img src="./assets/img/pluses/icon.svg" alt="the quick fox jumps over the " class="plus-card__ico">
             <p class="plus-card__title">Taxation Planning</p>
             <p class="plus-card__subtitle">the quick fox jumps over the
               lazy dog</p>
           </div>
-          <div class="pluses__card plus-card">
+          <div class="pluses__card plus-card" data-aos="flip-left" data-aos-duration="550">
             <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
             <p class="plus-card__title">Save money and tim</p>
             <p class="plus-card__subtitle">the quick fox jumps over the
               lazy dog</p>
           </div>
-          <div class="pluses__card plus-card">
+          <div class="pluses__card plus-card" data-aos="flip-left" data-aos-duration="400">
             <img src="./assets/img/pluses/icon.svg" alt="" class="plus-card__ico">
             <p class="plus-card__title">Outsourced Consulting Business</p>
             <p class="plus-card__subtitle">the quick fox jumps over the
@@ -126,7 +127,7 @@
     <section class="reviews">
       <div class="container">
         <h2 class="reviews__title s-title">What Clients Say</h2>
-        <p class="reviews__subtitle s-subtitle">Problems trying to resolve the conflict between 
+        <p class="reviews__subtitle s-subtitle">Problems trying to resolve the conflict between
           the two major realms of Classical physics: Newtonian mechanics </p>
 
         <div class="reviews__slider swiper-container">
@@ -136,7 +137,13 @@
                 <img src="./assets/img/reviews/user1.png" alt="user" class="review-card__img">
                 <p class="review-card__desc">Slate helps you see how many more days you need
                   to work to reach your financial goal for the month and year.</p>
-                <div class="review-card__rate"></div>
+                <div class="review-card__rate rate" data-mark="2">
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                </div>
                 <p class="review-card__name">Regina Miles</p>
                 <p class="review-card__position">Designer</p>
               </div>
@@ -146,7 +153,13 @@
                 <img src="./assets/img/reviews/user1.png" alt="user" class="review-card__img">
                 <p class="review-card__desc">Slate helps you see how many more days you need
                   to work to reach your financial goal for the month and year.</p>
-                <div class="review-card__rate"></div>
+                <div class="review-card__rate rate" data-mark="4">
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                </div>
                 <p class="review-card__name">Regina Miles</p>
                 <p class="review-card__position">Designer</p>
               </div>
@@ -156,7 +169,13 @@
                 <img src="./assets/img/reviews/user1.png" alt="user" class="review-card__img">
                 <p class="review-card__desc">Slate helps you see how many more days you need
                   to work to reach your financial goal for the month and year.</p>
-                <div class="review-card__rate"></div>
+                <div class="review-card__rate rate" data-mark="5">
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                  <span class="rate__star"></span>
+                </div>
                 <p class="review-card__name">Regina Miles</p>
                 <p class="review-card__position">Designer</p>
               </div>
@@ -170,28 +189,28 @@
     <div class="app">
       <div class="container">
         <h2 class="app__title s-title">Download Our App</h2>
-        <p class="app__subtitle s-subtitle">Problems trying to resolve the conflict between 
+        <p class="app__subtitle s-subtitle">Problems trying to resolve the conflict between
           the two major realms of Classical physics: Newtonian mechanics </p>
         <div class="app__row">
-          <div class="app__card app__card_apple">
+          <div class="app__card app__card_apple" data-aos="zoom-in">
             <p class="app__card-txt">Download on <br>
               App Store
             </p>
             <a href="#" class="app__card-link"></a>
           </div>
-          <div class="app__card app__card_google">
+          <div class="app__card app__card_google" data-aos="zoom-in">
             <p class="app__card-txt">Download on <br>
               Google Play
             </p>
             <a href="#" class="app__card-link"></a>
           </div>
-          <div class="app__card app__card_amazon">
+          <div class="app__card app__card_amazon" data-aos="zoom-in">
             <p class="app__card-txt">Download on <br>
               Google Play
             </p>
             <a href="#" class="app__card-link"></a>
           </div>
-          <div class="app__card app__card_windows">
+          <div class="app__card app__card_windows" data-aos="zoom-in">
             <p class="app__card-txt">Download on <br>
               Windows Store
             </p>
@@ -200,6 +219,61 @@
         </div>
       </div>
     </div>
+
+    <section class="price">
+      <div class="container">
+        <h2 class="price__title s-title">Pricing</h2>
+        <p class="price__subtitle s-subtitle">Problems trying to resolve the conflict between
+          the two major realms of Classical physics: Newtonian mechanics </p>
+        <div class="row">
+          <div class="price__card price-card">
+            <div class="price-card__info-block">
+              <p class="price-card__title">free</p>
+              <p class="price-card__txt">Most calendars are designed
+                for teams. Slate is designed
+                for freelancers who want
+                a simple way </p>
+            </div>
+            <div class="price-card__price-block">
+              <span class="price-card__price">0 <sup>$</sup> </span>
+              <button class="price-card__get-btn btn btn_prime">Try for free</button>
+            </div>
+          </div>
+          <div class="price__card price-card">
+            <div class="price-card__info-block">
+              <p class="price-card__title">standard </p>
+              <p class="price-card__txt">Most calendars are designed
+                for teams. Slate is designed
+                for freelancers who want
+                a simple way </p>
+            </div>
+            <div class="price-card__price-block">
+              <span class="price-card__price">19 <sup>$</sup> </span>
+              <button class="price-card__get-btn btn btn_prime">Try for free</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="spread">
+      <div class="container">
+        <div class="spread__row row">
+          <div class="spread__info-block" data-aos="fade-right" data-aos-duration="1000">
+            <h2 class="spread__title s-title">We Have Branches All
+              Over The World</h2>
+            <p class="spread__subtitle s-subtitle">The gradual accumulation of information about atomic and
+              small-scale behaviour during the first quarter of the 20th
+              century, which gave some indications about how small things
+              do behave, produced an increasing confusion which was
+              Heisenberg, and Born.</p>
+          </div>
+          <div class="spread__bg-block" data-aos="fade-left" data-aos-duration="1000">
+            <img class="spread__bg-img" src="./assets/img/spread/pngwing 1.png" alt="World">
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="contacts">
       <div class="container">
@@ -214,6 +288,7 @@
   </footer>
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script src="./assets/js/script.js"></script>
 
 </body>
