--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./assets/css/reset.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css?ver=14.04.21">
 </head>
 
 <body>
@@ -276,8 +276,50 @@
     </section>
 
     <section class="contacts">
-      <div class="container">
+      <div class="contacts__container container">
+        <div class="contacts__inner">
+          <form action="" class="contacts__form">
+            <div class="contacts__bg-block">
+              <img src="./assets/img/contacts/bg-f.jpeg" alt="contacts" class="contacts__bg">
+            </div>
+            <div class="contacts__info-block">
+              <h2 class="contacts__form-title">Book Appointment</h2>
+              <div class="contacts__input form-el">
+                <p class="form-el__title">Name *</p>
+                <input type="text" class="form-el__input" placeholder="Full Name *">
+              </div>
+              <div class="contacts__input form-el">
+                <p class="form-el__title">Email address *</p>
+                <input type="text" class="form-el__input" placeholder="example@gmail.com">
+              </div>
+              <div class="contacts__input form-el">
+                <p class="form-el__title">Departement *</p>
+                <select name="" id="" class="form-el__select form-el__input">
+                  <option value="develop">Develop</option>
+                  <option value="manager">Manager</option>
+                  <option value="devops">DevOps</option>
+                </select>
+              </div>
+              <div class="contacts__input form-el">
+                <p class="form-el__title">Time *</p>
+                <select name="" id="" class="form-el__select form-el__input">
+                  <option value="4:00">4:00 Available</option>
+                  <option value="6:00">6:00 Available</option>
+                  <option value="8:00">8:00 Available</option>
+                </select>
+              </div>
 
+              <input class="contacts__submit btn btn_prime" type="submit" value="Book Appointment">
+              <div class="contacts__confirm-wrap">
+                <label class="styled-checkbox">
+                  <input type="checkbox" name="" id="">
+                  <span>confirm</span>
+                </label>
+              </div>
+              
+            </div>
+          </form>
+        </div>
       </div>
     </section>
 
