--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./assets/css/reset.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="./assets/css/style.css?ver=14.04.21">
+  <link rel="stylesheet" href="./assets/css/style.min.css?ver=14.04.21">
+
 </head>
 
 <body>
@@ -421,7 +422,7 @@
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/script.min.js"></script>
 
 </body>
 
