--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./assets/css/reset.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="./assets/css/style.min.css?ver=14.04.21">
+  <link rel="stylesheet" href="./assets/css/style.css?ver=14.04.21">
 
 </head>
 
@@ -287,11 +287,11 @@
               <h2 class="contacts__form-title">Book Appointment</h2>
               <div class="contacts__input form-el">
                 <p class="form-el__title">Name *</p>
-                <input type="text" class="form-el__input" placeholder="Full Name *">
+                <input type="text" name="name" class="form-el__input" placeholder="Full Name *">
               </div>
               <div class="contacts__input form-el">
                 <p class="form-el__title">Email address *</p>
-                <input type="text" class="form-el__input" placeholder="example@gmail.com">
+                <input type="text" name="email" class="form-el__input" placeholder="example@gmail.com">
               </div>
               <div class="contacts__input form-el">
                 <p class="form-el__title">Departement *</p>
@@ -422,7 +422,7 @@
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="./assets/js/script.min.js"></script>
+  <script src="./assets/js/script.js"></script>
 
 </body>
 
